--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
     <!--<spring.version>4.2.6.RELEASE</spring.version>-->
     <spring.version>4.1.1.RELEASE</spring.version>
     <pagehelper.version>5.1.2-beta</pagehelper.version>
-    <mysql.version>5.1.6</mysql.version>
+    <!--<mysql.version>5.1.6</mysql.version>-->
+    <mysql.version>5.1.25</mysql.version>
     <mybatis.spring.version>1.2.3</mybatis.spring.version>
     <mybatis.version>3.1.1</mybatis.version>
     <junit.version>4.12</junit.version>
@@ -21,7 +22,7 @@
     <jackson.version>2.4</jackson.version>
     <servlet-api.version>3.1.0</servlet-api.version>
     <druid.version>1.0.18</druid.version>
-    <log4j.version>1.2.16</log4j.version>
+    <log4j.version>2.5</log4j.version>
     <commons-logging.version>1.2</commons-logging.version>
     <commons-fileupload.version>1.2.1</commons-fileupload.version>
     <commons-io.version>1.3.2</commons-io.version>
@@ -30,7 +31,58 @@
     <mybatis-generator.version>1.3.5</mybatis-generator.version>
   </properties>
 
+
+
   <dependencies>
+    <!--<dependency>-->
+      <!--<groupId>org.mybatis.caches</groupId>-->
+      <!--<artifactId>mybatis-redis</artifactId>-->
+      <!--<version></version>-->
+    <!--</dependency>-->
+    <dependency>
+      <groupId>org.mybatis.caches</groupId>
+      <artifactId>mybatis-redis</artifactId>
+      <version>1.0.0-beta2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>2.4.2</version>
+    </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>1.6.2.RELEASE</version>
+    </dependency>
+
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.data</groupId>-->
+      <!--<artifactId>spring-data-redis</artifactId>-->
+      <!--<version>1.8.1.RELEASE</version>-->
+    <!--</dependency>-->
+
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>2.10.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.18</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.18</version>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-core</artifactId>
@@ -157,6 +209,30 @@
 
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context-support</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-expression</artifactId>
+      <version>${spring.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
       <version>${spring.version}</version>
     </dependency>
@@ -218,8 +294,8 @@
       <version>${jsqlparser.version}</version>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
       <version>${log4j.version}</version>
     </dependency>
 
